Updated and Final Version 1.0